Updated Dev environment IP Address

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,8 @@ android {
             buildConfigField 'String', 'Country_Code', '\"US\"'
         }
         dev {
-            buildConfigField 'String', 'URL_PRODUCTION', '\"http://18.234.239.29:9001/\"'
+            buildConfigField 'String', 'URL_PRODUCTION', '\"http://54.172.13.210:9001/\"'
+//            buildConfigField 'String', 'URL_PRODUCTION', '\"http://18.234.239.29:9001/\"'
             buildConfigField 'String', 'Referer', '\"http://mobile/\"'
             buildConfigField 'String', 'Country_Code', '\"US\"'
         }
