--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,10 +82,7 @@
         <activity
             android:name=".view.business.CompanyInfoDetails"
             android:exported="false" />
-        <activity
-            android:exported="false"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
+
         <activity
             android:name=".view.business.ClearBatchPromptActivity"
             android:exported="true"
@@ -398,11 +395,11 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".view.business.BusinessRegistrationTrackingActivity"
-            android:exported="false"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
+<!--        <activity-->
+<!--            android:name=".view.business.BusinessRegistrationTrackingActivity"-->
+<!--            android:exported="false"-->
+<!--            android:screenOrientation="portrait"-->
+<!--            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />-->
         <activity
             android:name=".view.business.BusinessDashboardActivity"
             android:exported="false"
