--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,7 +82,6 @@
         <activity
             android:name=".view.business.CompanyInfoDetails"
             android:exported="false" />
-
         <activity
             android:name=".view.business.ClearBatchPromptActivity"
             android:exported="true"
@@ -394,12 +393,11 @@
             android:configChanges="uiMode"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize" />
-<!--        <activity-->
-<!--            android:name=".view.business.BusinessRegistrationTrackingActivity"-->
-<!--            android:exported="false"-->
-<!--            android:screenOrientation="portrait"-->
-<!--            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />-->
+            android:windowSoftInputMode="adjustResize" /> <!-- <activity -->
+        <!-- android:name=".view.business.BusinessRegistrationTrackingActivity" -->
+        <!-- android:exported="false" -->
+        <!-- android:screenOrientation="portrait" -->
+        <!-- android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" /> -->
         <activity
             android:name=".view.business.BusinessDashboardActivity"
             android:exported="false"
@@ -479,7 +477,6 @@
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
-
         <activity
             android:name=".view.business.DBAinfoBtmSheetActivity"
             android:exported="false"
